Remove also libpng and zlib libraries

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 sudo: required
 
 before_install:
-  - sudo apt-get install -y zlib1g libpng12-0 ca-certificates
+  - sudo apt-get install -y ca-certificates
   - ./build
 
 script:
