--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ sudo: required
 
 before_install:
   - sudo apt-get install -y ca-certificates
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin v1.10.2
   - SHALLOW_CLONE=true ./build
 
 script:
+  - golangci-lint run
   - go test -v -race --timeout 1m
