Tune GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,21 +3,16 @@ name: CI
 jobs:
   quality:
     name: Quality
-    strategy:
-      matrix:
-        go-version: [1.15.x]
-        platform: [ubuntu-latest]
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
+
     steps:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.15
 
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
 
       - name: Install mupdf
         run: SHALLOW_CLONE=true ./build
