--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           go-version: 1.16
 
       - name: Dependency linter
+        if: matrix.os == 'ubuntu-latest'
         run: |
           go mod tidy
           git add .
@@ -44,6 +45,7 @@ jobs:
           go test -race -bench .
 
       - name: Go golangci-lint
+        if: matrix.os == 'ubuntu-latest'
         run: |
           go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.40.1
           golangci-lint run -c misc/golangci/config.yml ./...
