--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,18 @@ jobs:
           go test -race -cover -covermode=atomic -json | tparse -all
           go test -race -bench .
 
+      - name: Install valgrind
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends --yes valgrind
+
+      - name: Test & valgrind
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          go test -c .
+          valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./lazypdf.test
+
       - name: Go golangci-lint
         if: matrix.os == 'ubuntu-latest'
         run: |
