Improve CI cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,23 @@ jobs:
           go-version: 1.16
 
       - name: Go cache
+        id: cache
         uses: actions/cache@v2
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
+            ~/go/bin
             ~/Library/Caches/go-build
-            ~/go/pkg/mod
           key: ${{ matrix.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ matrix.os }}-go-
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          go get github.com/mfridman/tparse
+          go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.40.1
 
       - name: Dependency linter
         if: matrix.os == 'ubuntu-latest'
@@ -47,12 +54,9 @@ jobs:
 
       - name: Test
         run: |
-          go get github.com/mfridman/tparse
           go test -race -cover -covermode=atomic -json | tparse -all -dump -smallscreen
           go test -race -bench .
 
       - name: Go golangci-lint
         if: matrix.os == 'ubuntu-latest'
-        run: |
-          go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.40.1
-          golangci-lint run -c misc/golangci/config.yml ./...
+        run: golangci-lint run -c misc/golangci/config.yml ./...
