--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
+          go-version: 1.17
 
       - name: Go cache
         id: cache
@@ -39,8 +39,8 @@ jobs:
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          go get github.com/mfridman/tparse
-          go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.40.1
+          go install github.com/mfridman/tparse@v0.8.3
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.42.1
 
       - name: Dependency linter
         if: matrix.os == 'ubuntu-latest'
