--- a/misc/golangci/config.yml
+++ b/misc/golangci/config.yml
@@ -32,7 +32,7 @@ linters:
     - godox
     - whitespace
 
-linter-settings:
+linters-settings:
   goimports:
     local-prefixes: github.com/nitro/lazypdf
 
