--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,16 +16,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.19
+          go-version: 1.22.4
 
       - name: Go cache
         id: cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cache/go-build
@@ -39,8 +39,8 @@ jobs:
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          go install github.com/mfridman/tparse@v0.8.3
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.42.1
+          go install github.com/mfridman/tparse@v0.13.3
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.59.0
 
       - name: Dependency linter
         if: matrix.os == 'ubuntu-latest'
@@ -54,7 +54,7 @@ jobs:
 
       - name: Test
         run: |
-          go test -race -cover -covermode=atomic -json | tparse -all -dump -smallscreen
+          go test -race -cover -covermode=atomic -json | tparse -all -smallscreen
           go test -race -bench .
 
       - name: Go golangci-lint
