--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -11,11 +11,7 @@ jobs:
     runs-on: [ubuntu-latest]
     strategy:
       matrix:
-        target:
-          [
-            dependency-test,
-            code-test,
-          ]
+        target: [dependency-test, code-test]
         include:
           - target: dependency-test
             name: Snyk dependency scan
@@ -33,7 +29,7 @@ jobs:
       - uses: snyk/actions/setup@master
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22.4'
+          go-version: "1.22.4"
 
       - name: Exec ${{ matrix.target }}
         env:
