--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.22.4
+          go-version: 1.22.6
 
       - name: Go cache
         id: cache
@@ -46,13 +46,13 @@ jobs:
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          go install github.com/mfridman/tparse@v0.13.3
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.59.0
+          go install github.com/mfridman/tparse@v0.16.0
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.63.4
 
       - name: Dependency linter
         if: matrix.os == 'ubuntu-latest'
         run: |
-          go mod tidy -compat=1.19
+          go mod tidy
           git add .
           git diff --cached --exit-code
 
