update snyk parameters

--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -33,6 +33,6 @@ jobs:
 
       - name: Exec ${{ matrix.target }}
         env:
-          SNYK_TOKEN: ${{ secrets.sn_x_pub }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           SNYK_API: https://app.eu.snyk.io/api
-        run: ${{ matrix.cmd }} --org=nitro-x
+        run: ${{ matrix.cmd }} --org=wapadi
