WAPADI-248 - Update org in snyk action (#162)

--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.sn_x_pub }}
           SNYK_API: https://app.eu.snyk.io/api
-        run: ${{ matrix.cmd }} --org=nitro-x
+        run: ${{ matrix.cmd }} --org=wapadi
